[gd_scene load_steps=11 format=3 uid="uid://dfuj4bwpmbe3c"]

[ext_resource type="Texture2D" uid="uid://b5lfus0n82l3b" path="res://assets/sprites/icon/ico_done.png" id="1_5egtm"]
[ext_resource type="Texture2D" uid="uid://yd55tatafglx" path="res://assets/sprites/icon/ico_redo.png" id="1_ggdqa"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="1_tvp3i"]
[ext_resource type="Texture2D" uid="uid://c1l8462byniwk" path="res://assets/sprites/icon/ico_sword.png" id="3_0aqsh"]
[ext_resource type="Texture2D" uid="uid://darpolmgn2lc2" path="res://assets/sprites/icon/ico_redo_focused.png" id="3_xniny"]
[ext_resource type="Texture2D" uid="uid://dbwmwc1ec4gf1" path="res://assets/sprites/icon/ico_redo_hover.png" id="4_47qk3"]
[ext_resource type="Texture2D" uid="uid://du5know4r1b7a" path="res://assets/sprites/icon/ico_redo_disabled.png" id="5_cklua"]
[ext_resource type="Texture2D" uid="uid://j7sg474bp0yn" path="res://assets/sprites/icon/ico_done_focused.png" id="7_4jkhx"]
[ext_resource type="Texture2D" uid="uid://dxujntkbhtw2k" path="res://assets/sprites/icon/ico_done_hover.png" id="8_nqpfq"]
[ext_resource type="Texture2D" uid="uid://bollckqaf06re" path="res://assets/sprites/icon/ico_done_disabled.png" id="9_my1dx"]

[node name="HUD2" type="CanvasLayer"]
script = ExtResource("1_tvp3i")

[node name="PanelHUD" type="PanelContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -176.0
grow_horizontal = 2
grow_vertical = 0

[node name="RedoButton" type="TextureButton" parent="PanelHUD" groups=["button"]]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
texture_normal = ExtResource("1_ggdqa")
texture_pressed = ExtResource("3_xniny")
texture_hover = ExtResource("4_47qk3")
texture_disabled = ExtResource("5_cklua")

[node name="DoneButton" type="TextureButton" parent="PanelHUD" groups=["button"]]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture_normal = ExtResource("1_5egtm")
texture_pressed = ExtResource("7_4jkhx")
texture_hover = ExtResource("8_nqpfq")
texture_disabled = ExtResource("9_my1dx")

[node name="GridModes" type="GridContainer" parent="PanelHUD"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
columns = 3

[node name="ModeA" type="TextureButton" parent="PanelHUD/GridModes"]
layout_mode = 2

[node name="ModeB" type="Button" parent="PanelHUD/GridModes"]
layout_mode = 2
text = "B"

[node name="ModeC" type="Button" parent="PanelHUD/GridModes"]
layout_mode = 2
text = "C"

[node name="BladesGrid" type="GridContainer" parent="PanelHUD"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
columns = 2

[node name="BladeTexture" type="TextureRect" parent="PanelHUD/BladesGrid"]
layout_mode = 2
texture = ExtResource("3_0aqsh")

[node name="BladeLabel" type="Label" parent="PanelHUD/BladesGrid"]
layout_mode = 2
text = "x3"

[node name="DataGrid" type="GridContainer" parent="PanelHUD"]
custom_minimum_size = Vector2(-98.8, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="MoneyLabel" type="Label" parent="PanelHUD/DataGrid"]
layout_mode = 2
size_flags_horizontal = 8
text = "$1526"

[connection signal="gain_blade" from="." to="." method="_on_gain_blade"]
[connection signal="lose_blade" from="." to="." method="_on_lose_blade"]
[connection signal="pressed" from="PanelHUD/RedoButton" to="." method="_on_redo_button_pressed"]
[connection signal="pressed" from="PanelHUD/DoneButton" to="." method="_on_done_button_pressed"]
